--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-aaa
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Mini Allo-ciné</title>
+    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="">
+</head>
+<body>
+
+
+
+
+    <script src=""></script>
+    <script src=""></script>
+    <script src=""></script>
+</body>
+</html>
